--- a/Views/Templates/TeaserList.phtml
+++ b/Views/Templates/TeaserList.phtml
@@ -182,7 +182,7 @@
                         if (parray[i]['pageid'] > 0) {
                             var url = '<?php echo $this->baseUrlWithoutIndex ?>' + parray[i]['pageid'];
                             var urltype = 'intern';
-                        } else if (String(parray[i]['maintext']) !== "") {
+                        } else if (String(parray[i]['exturl']) === "") {
                             var url = '<?php echo $this->baseUrl . "&show=detail&id=" ?>' + parray[i]['id'];
                             var urltype = 'intern';
                         } else if (String(parray[i]['exturl']) !== "") {
