--- a/Views/Templates/EventsList.phtml
+++ b/Views/Templates/EventsList.phtml
@@ -94,7 +94,7 @@
                         else {
                             $more = "mehr";
                         }
-
+                        echo $entry["opt4text"];
                         echo "...[<a class=\"extern\" href=\"" . $entry["opt3text"] . "\">" . $more . "</a>]";
                     }
                     
@@ -105,7 +105,7 @@
                         else {
                             $more = "mehr";
                         }
-
+                        echo $entry["opt4text"];
                         echo "...[<a class=\"intern\" href=\"" . $this->baseUrlWithoutIndex . $entry["opt1number"] . "\">" . $more . "</a>]";
                     }
 
