--- a/Views/Templates/EventsListArchived.phtml
+++ b/Views/Templates/EventsListArchived.phtml
@@ -141,6 +141,17 @@
             <div style="border-bottom:1px dotted #627D90;padding-bottom:10px;">
                 <p>
                     <?php
+                    if (!empty($entry["opt3text"])) {
+                        if ($this->lang == "en") {
+                            $more = "more";
+                        }
+                        else {
+                            $more = "mehr";
+                        }
+                        echo $entry["opt4text"];
+                        echo "...[<a class=\"extern\" href=\"" . $entry["opt3text"] . "\">" . $more . "</a>]";
+                    }
+                    
                     if (!empty($entry["opt1number"])) {
                         if ($this->lang == "en") {
                             $more = "more";
@@ -148,8 +159,8 @@
                         else {
                             $more = "mehr";
                         }
-
-                        echo "...[<a href=\"" . $this->baseUrlWithoutIndex . $entry["opt1number"] . "\">" . $more . "</a>]";
+                        echo $entry["opt4text"];
+                        echo "...[<a class=\"intern\" href=\"" . $this->baseUrlWithoutIndex . $entry["opt1number"] . "\">" . $more . "</a>]";
                     }
 
                     if (!empty($entry["opt1clob"])) {
