--- a/Views/Templates/EventsList.phtml
+++ b/Views/Templates/EventsList.phtml
@@ -43,6 +43,14 @@
         width:10px;
         float:left;
     }
+    
+    div.item{position: relative;}
+    
+    div.item img.events_logo{
+        position: absolute;
+        top: 30px;
+        right: -15px;
+    }
 </style>
 <?php if ($this->admin) : ?>
     <div  class="add">
@@ -52,7 +60,7 @@
 
 <?php if (!empty($this->data)) : ?>
     <?php foreach ($this->data as $entry) : ?>
-        <div class="news_item">
+        <div class="item">
             <?php if ($this->admin) : ?>
                 <div class="button_menu">
                     <a class="menu" href="<?php echo $this->baseUrl . "/#" ?>" onclick="if (confirm('Diesen Eintrag wirklich l&ouml;schen ?')) {
@@ -61,6 +69,9 @@
                                         }" >l&ouml;schen</a>
                     <a class="menu" href="<?php echo $this->baseUrl . "&show=form&cmd=edit&id=" . $entry["id"] ?>">bearbeiten</a>
                 </div>
+            <?php endif; ?>
+            <?php if(array_key_exists("logoUrl", $entry)) :?>
+                <img class="events_logo" src="<?php echo $entry["logoUrl"]; ?>" >
             <?php endif; ?>
             <div style="margin-top:10px;color:#627D90;">
                 <?php
@@ -130,7 +141,7 @@
         </div>
     <?php endforeach; ?>
 <?php else : ?>
-    <div class="news_item">
+    <div class="item">
         <div class="button_menu">
             <p>keine Eintr&auml;ge vorhanden</p>
         </div>
