--- a/Views/Templates/EventsListArchived.phtml
+++ b/Views/Templates/EventsListArchived.phtml
@@ -63,13 +63,12 @@
         height: 0;
     }
     
-    div.item{position: relative;}
-    
     div.item img.events_logo{
-        position: absolute;
-        top: 30px;
-        right: -15px;
-        max-height: 80px;
+        float: left;
+        max-width: 170px;
+        height: auto;
+        padding-top: 10px;
+        max-height: 110px;
     }
 </style>
 <div class="back"  >
