--- a/Views/Templates/EventsList.phtml
+++ b/Views/Templates/EventsList.phtml
@@ -1,4 +1,13 @@
 <style>
+     .clearfix:after {
+        content: ".";
+        display: block;
+        clear: both;
+        visibility: hidden;
+        line-height: 0;
+        height: 0;
+    }
+    
     .add {
         border-bottom:1px dotted #627D90;
         padding-bottom:10px;
@@ -69,32 +78,56 @@
                     <a class="menu" href="<?php echo $this->baseUrl . "&show=form&cmd=edit&id=" . $entry["id"] ?>">bearbeiten</a>
                 </div>
             <?php endif; ?>
-            
-            <?php if(array_key_exists("logoUrl", $entry)) :?>
-                <img class="events_logo" src="<?php echo $entry["logoUrl"]; ?>" >
-            <?php endif; ?>
-            
-            <div style="margin-top:10px;color:#627D90;">
-                <?php
-                $year = substr($entry['opt2number'], 0, 4);
-                $month = substr($entry['opt2number'], 4, 2);
-                $day = substr($entry['opt2number'], 6, 2);
+            <?php if (array_key_exists("logoUrl", $entry)) : ?>
+                <div class="clearfix">
+                    <img class="events_logo" src="<?php echo $entry["logoUrl"]; ?>" >
+                    <div style="float:right;width: 300px;">
+                        <div style="margin-top:10px;color:#627D90;">
+                            <?php
+                            $year = substr($entry['opt2number'], 0, 4);
+                            $month = substr($entry['opt2number'], 4, 2);
+                            $day = substr($entry['opt2number'], 6, 2);
 
-                $date2 = "";
-                if ($entry["opt4number"] != $entry["opt2number"]) {
-                    $year2 = substr($entry['opt4number'], 0, 4);
-                    $month2 = substr($entry['opt4number'], 4, 2);
-                    $day2 = substr($entry['opt4number'], 6, 2);
+                            $date2 = "";
+                            if ($entry["opt4number"] != $entry["opt2number"]) {
+                                $year2 = substr($entry['opt4number'], 0, 4);
+                                $month2 = substr($entry['opt4number'], 4, 2);
+                                $day2 = substr($entry['opt4number'], 6, 2);
 
-                    $date2 = ' - ' . $day2 . '.' . $month2 . '.' . $year2;
-                }
-                echo $day . '.' . $month . '.' . $year . $date2;
-                ?>
-            </div>
-                
-            <h1><?php echo $entry["opt1text"] ?></h1>
+                                $date2 = ' - ' . $day2 . '.' . $month2 . '.' . $year2;
+                            }
+                            echo $day . '.' . $month . '.' . $year . $date2;
+                            ?>
+                        </div>
 
-            <h2><?php echo $entry["opt2text"] ?></h2>
+                        <h1><?php echo $entry["opt1text"] ?></h1>
+
+                        <h2><?php echo $entry["opt2text"] ?></h2>
+                    </div>
+                </div>
+            <?php else: ?>
+                <div style="margin-top:10px;color:#627D90;">
+                    <?php
+                    $year = substr($entry['opt2number'], 0, 4);
+                    $month = substr($entry['opt2number'], 4, 2);
+                    $day = substr($entry['opt2number'], 6, 2);
+
+                    $date2 = "";
+                    if ($entry["opt4number"] != $entry["opt2number"]) {
+                        $year2 = substr($entry['opt4number'], 0, 4);
+                        $month2 = substr($entry['opt4number'], 4, 2);
+                        $day2 = substr($entry['opt4number'], 6, 2);
+
+                        $date2 = ' - ' . $day2 . '.' . $month2 . '.' . $year2;
+                    }
+                    echo $day . '.' . $month . '.' . $year . $date2;
+                    ?>
+                </div>
+
+                <h1><?php echo $entry["opt1text"] ?></h1>
+
+                <h2><?php echo $entry["opt2text"] ?></h2>
+        <?php endif; ?>
 
             <div style="border-bottom:1px dotted #627D90;padding-bottom:10px;">
                 <p>
