extern links will be open in a new tab

--- a/Views/Templates/TeaserList.phtml
+++ b/Views/Templates/TeaserList.phtml
@@ -328,7 +328,7 @@
                                     $more = "mehr";
                                 }
 
-                                echo "...[<a class=\"extern\" href=\"" . $entry["opt3text"] . "\">" . $more . "</a>]";
+                                echo "...[<a class=\"extern\" target=\"_blank\" href=\"" . $entry["opt3text"] . "\">" . $more . "</a>]";
                             }
                             if (!empty($entry["opt1number"])) {
                                 if ($this->lang == "en") {
