links to an ct page will be open in a new tab, detail view will be open in same window

--- a/Views/Templates/TeaserList.phtml
+++ b/Views/Templates/TeaserList.phtml
@@ -338,7 +338,7 @@
                                     $more = "mehr";
                                 }
 
-                                echo "...[<a class=\"intern\" href=\"" . $this->baseUrlWithoutIndex . $entry["opt1number"] . "\">" . $more . "</a>]";
+                                echo "...[<a class=\"intern\" target=\"_blank\" href=\"" . $this->baseUrlWithoutIndex . $entry["opt1number"] . "\">" . $more . "</a>]";
                             }
 
                             if (!empty($entry["opt1clob"])) {
